--- a/web.config
+++ b/web.config
@@ -3,4 +3,10 @@
     <connectionStrings>
         <add connectionString="server=localhost;database=viajes;uid=root" name="viajes" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
+    <system.data>
+        <DbProviderFactories>
+            <remove invariant="System.Data.SqlServerCe.4.0" />
+            <add invariant="System.Data.SqlServerCe.4.0" name="Microsoft® SQL Server® Compact 4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+        </DbProviderFactories>
+    </system.data>
 </configuration>
