Agregando ultimos cambios

--- a/web.config
+++ b/web.config
@@ -7,6 +7,6 @@
         </DbProviderFactories>
     </system.data>
     <connectionStrings>
-        <add connectionString="server=localhost;uid=viajesU8jpo;pwd=-XX)Q:S}aTvK;Database=viajes" name="viajes" providerName="MySql.Data.MySqlClient" />
+        <add connectionString="server=localhost;uid=terrazsa_admin;Pwd=terrazsa123456;database=terrazsa_viajes" name="terrazsa_viajes" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 </configuration>
